sig/sig-backend-nginx-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sig-backend-nginx-prod-deploy
  labels:
    app: sig-backend-nginx-prod-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sig-backend-nginx-prod-deploy
  template:
    metadata:
      labels:
        app: sig-backend-nginx-prod-deploy
    spec:
      containers:
      - name: sig-backend-nginx-prod-deploy
        image: ldamasio/sig-backend-nginx-prod
        ports:
        - containerPort: 80
