sig/sig-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sig-frontend-prod-deploy
spec:
  selector:
    matchLabels:
      app: sig-frontend-prod-deploy
  template:
    metadata:
      labels:
        app: sig-frontend-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: sig-frontend-prod-deploy
          image: ldamasio/sig-frontend-prod:latest
          ports:
          - containerPort: 3000
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "200Mi"
              cpu: "500m"
