sig/sig-backend-django-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sig-backend-django-prod-svc
spec:
  selector:
    app: sig-backend-django-prod-deploy
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
