sig/sig-frontend-prod-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sig-frontend-prod-ingress
  annotations:
    cert-manager.io/cluster-issuer: "sig-frontend-prod-clusterissuer"
    spec.ingressClassName: "public"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - sigma.rbxrobotica.com.br
    secretName: sig-frontend-prod-secret
  rules:
  - host: sigma.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sig-frontend-prod-svc
            port:
              number: 80
